--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/001/c/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/001/c/index.xhtml
@@ -32,12 +32,12 @@
             </div>
             <div class = "control-group table table-col-2" style ="display: inline-flex;">
                 <div class ="cell valign-top">
-                    <div id="C1_5" data-bind="ntsFormLabel: { required: true}" style="margin: 5px 10px 10px 10px;">
+                    <div id="C1_5" data-bind="ntsFormLabel: { required: true}" style="margin: 5px 0px 10px 10px;">
                         <span class="label" >#{i18n.getText('QMM001_38')}</span>
                     </div>
                 </div>
                 <div class ="cell valign-top">
-                        <div id="C1_6" tabindex="1" style="margin-right: 20px;margin-top: 10px;height: 80px;" class="cell"
+                        <div id="C1_6" tabindex="1" style="vertical-align: middle; width: 200px" class="cell"
                              data-bind="ntsRadioBoxGroup:  {
                              value: methodEditing,
                              options: itemList(),
@@ -47,7 +47,7 @@
                     </div>
 
                 </div>
-                <span id = "C1_9" class="label warning" style="height: 50px;">#{i18n.getText('QMM001_42')}</span>
+                <span id = "C1_9" class="label warning" style="height: 100%;width:400px">#{i18n.getText('QMM001_42')}</span>
             </div>
             <div  style="margin: 0px 0px 0px 165px;">
 
