--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/a/qmm019.a.style.css
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/a/qmm019.a.style.css
@@ -19,3 +19,22 @@
 #A3_2, #A3_6, #A3_9, #A3_13 {
     width: 180px;
 }
+
+#A4_1, #A5_1, #A7_1, #A8_1 {
+    margin-top: 20px;
+}
+
+#A7_2, #A8_2 {
+    background: url("../resource/QMM019_1.png") no-repeat;
+    border: 0;
+    width: 27px;
+    height: 24px;
+}
+
+#A4_2, #A5_2, #A7_3, #A8_3 {
+    font-size: 22px;
+}
+
+#A7_3, #A8_3 {
+    margin-left: 15px;
+}
