--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/c/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/c/index.xhtml
@@ -9,8 +9,8 @@
     <ui:define name="htmlHead">
         <script type='text/javascript'>
             var dialogSize = {
-                width: 550,
-                height: 400
+                width: 570,
+                height: 330
             };
         </script>
         <com:scriptfile set="IGNITE"/>
@@ -27,13 +27,17 @@
                 <!-- 対象データ -->
                 <div id="C1_1" data-bind="ntsFormLabel: {required: true}">#{i18n.getText('QMM019_100')}</div>
                 <!-- 明細書コード -->
-                <label id="C1_2">#{i18n.getText('QMM019_15')} </label>
+                <label id="C1_2" data-bind="text: statementCode"></label>
+                <label> </label>
                 <!-- 明細書名 -->
-                <label id="C1_3">#{i18n.getText('QMM019_41')} </label>
+                <label id="C1_3" data-bind="text: statementName"></label>
+                <label>  (</label>
                 <!-- 開始年月 -->
-                <label id="C1_4">#{i18n.getText('QMM019_43')} </label>
+                <label id="C1_4" data-bind="text: startMonth"></label>
+                <label> ~ </label>
                 <!-- 終了年月 -->
-                <label id="C1_5">#{i18n.getText('QMM019_101')}</label>
+                <label id="C1_5" data-bind="text: endMonth"></label>
+                <label>)</label>
             </div>
             <div class="valign-center control-group">
                 <!-- 編集方法の選択 -->
@@ -59,7 +63,7 @@
                         <!-- 開始年月 -->
                         <div id="C1_12" tabindex="2" data-bind="ntsDatePicker: {
                                                             name: '#[QMM019_43]',
-                                                            value: yearMonth,
+                                                            value: newStartMonth,
                                                             required: true,
                                                             dateFormat: 'yearmonth'}"></div>
                         <!-- 終了年月 -->
