--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/007/share/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/007/share/index.xhtml
@@ -82,6 +82,7 @@
 				<div id="singleDate"
 					data-bind="ntsDatePicker: {
 											value: $parent.dateSingle, 
+											valueFormat: 'YYYY/MM/DD' , 
 											dateFormat: 'YYYY/MM/DD' , 
 											required:!$parent.multiDate() , 
 											name:'#{i18n.getText('KAF006_8')}'
