--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/share/qmm019.d-g.style.css
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/share/qmm019.d-g.style.css
@@ -132,6 +132,10 @@
     height: 23px;
 }
 
+.table-origin .acc-content .acc-table .limited-label {
+    width: 190px;
+}
+
 #fixed-table{
     width: 255px;
 }
