--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/e/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/e/index.xhtml
@@ -31,7 +31,7 @@
             <div class="table table-origin">
                 <div class="cell valign-top">
                     <!--E1_1-->
-                    <div data-bind="ntsPanel:{width: '280px', height: '490px', direction: 'right', showIcon: true, visible: true}">
+                    <div data-bind="ntsPanel:{width: '260px', height: '490px', direction: 'right', showIcon: true, visible: true}">
                         <div class="table table-search">
                             <div class="cell valign-center">
                                 <!--E1_2-->
@@ -49,7 +49,7 @@
                             </div>
                             <div class="cell valign-top">
                                 <!--E1_5-->
-                                <div tabindex="1" style="width: 190px" data-bind="ntsSearchBox: {
+                                <div tabindex="1" style="width: 170px" data-bind="ntsSearchBox: {
 									searchMode: 'highlight',
 									targetKey: 'itemNameCd',
 									comId: 'E1_6',
@@ -68,7 +68,7 @@
                             primaryKey: 'itemNameCd',
                             columns: [
                                 { headerText: '#{i18n.getText('QMM019_108')}', key: 'itemNameCd', width: 50, formatter: _.escape},
-                                { headerText: '#{i18n.getText('QMM019_109')}', key: 'name', width: 213, formatter: _.escape}
+                                { headerText: '#{i18n.getText('QMM019_109')}', key: 'name', width: 193, formatter: _.escape}
                             ],
                             multiple: false,
                             value: codeSelected}"/>
@@ -134,7 +134,7 @@
                                 optionsText: 'name',
                                 required: true,
                                 enable: $vm.screenControl().enableE2_8(),
-                                selectFirstIfNull: true,
+                                selectFirstIfNull: false,
                                 columns: [
                                     { prop: 'name', length: 10 },
                                 ]}"/>
@@ -400,7 +400,7 @@
                                 <table class="acc-table" data-bind="with: deductionItemSet">
                                     <colgroup>
                                         <col width="90px"/>
-                                        <col width="197px"/>
+                                        <col width="207px"/>
                                     </colgroup>
                                     <tr>
                                         <th class="ui-widget-header">
@@ -488,7 +488,7 @@
                                             <table id="fixed-table">
                                                 <colgroup>
                                                     <col width="70px"/>
-                                                    <col width="185px"/>
+                                                    <col width="195px"/>
                                                 </colgroup>
                                                 <thead>
                                                 <tr>
