--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/012/e/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/012/e/index.xhtml
@@ -24,7 +24,7 @@
 				</div>
 				
 				<div id="functions-area-bottom">
-					<button id="btnRegistry">#{i18n.getText('KMK012_41')}</button>
+					<button id="btnRegistry" class="proceed">#{i18n.getText('KMK012_41')}</button>
 					<button id="btnClose" data-bind="click: closeWindowns">#{i18n.getText('KMK012_42')}</button>
 				</div>
 				
