--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/e/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/e/index.xhtml
@@ -2,7 +2,7 @@
     <div class="sidebar-content-header" style = "min-width: 1000px;">
             <span class="title">#{i18n.getText('QMM020_5')}</span>
             <button id="A1_1" tabindex="1" class="proceed"
-                    data-bind="enable: $root.errors.isEmpty">#{i18n.getText('QMM020_1')}</button>
+                    data-bind="click: registerClassification, enable: !enableRegis() &amp;&amp; $root.errors.isEmpty ">#{i18n.getText('QMM020_1')}</button>
 
             <button id="A1_2" tabindex="2"
                     data-bind="enable: $root.errors.isEmpty">#{i18n.getText('QMM020_2')}</button>
@@ -15,12 +15,12 @@
 
     </div>
     <div style="margin-top: 15px;" class="contents-area fixed-flex-layout">
-        <div class="fixed-flex-layout-left" style="margin-left: 25px">
+        <div class="fixed-flex-layout-left" style="margin-left: 20px">
             <div id = "E1_2" data-bind="ntsPanel:{width: '200px', height: '300px', direction: 'right', showIcon: false, visible: true}">
                 <div>
-                    <button id="E1_3" data-bind="click: openJScreen, enable: $root.errors.isEmpty">#{i18n.getText('QMM020_13')}</button>
+                    <button id="E1_3" data-bind="click: openJScreen, enable: !enableNew() &amp;&amp; $root.errors.isEmpty">#{i18n.getText('QMM020_13')}</button>
 
-                    <button id="E1_4" data-bind="click: openKScreen, enable: $root.errors.isEmpty" style="float: right">#{i18n.getText('QMM020_14')}</button>
+                    <button id="E1_4" data-bind="click: openKScreen, enable: enableEdit() &amp;&amp; $root.errors.isEmpty" style="float: right">#{i18n.getText('QMM020_14')}</button>
                 </div>
 
                 <div style="margin-top: 10px">
