--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/g/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/g/index.xhtml
@@ -1,7 +1,5 @@
 <div>
-    <div class="functions-area sidebar-content-header " style = "min-width: 1000px;">
-
-        <div id="A">
+    <div class="sidebar-content-header " style = "min-width: 1000px;">
             <span class = "title">#{i18n.getText('QMM020_5')}</span>
             <button id="A1_1" tabindex="1" class="proceed"
                     data-bind="click: registerSalary, enable: $root.errors.isEmpty">#{i18n.getText('QMM020_1')}</button>
@@ -16,9 +14,8 @@
                     data-bind=" enable: false">#{i18n.getText('QMM020_4')}</button>
         </div>
 
-    </div>
     <div style="margin-top: 15px;" class="contents-area fixed-flex-layout">
-        <div class="fixed-flex-layout-left" style="margin-left: 25px">
+        <div class="fixed-flex-layout-left" style="margin-left: 20px">
             <div data-bind="ntsPanel:{width: '200px', height: '300px', direction: 'right', showIcon: false, visible: true}">
                 <div>
                     <button id="G1_3" data-bind="click: openJScreen, enable: $root.errors.isEmpty">#{i18n.getText('QMM020_13')}</button>
