--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/h/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/h/index.xhtml
@@ -1,69 +1,75 @@
 <div>
-    <div class="functions-area sidebar-content-header flex" style = "min-width: 1000px;">
+    <div class="sidebar-content-header" style = "min-width: 1000px;">
 
-        <div id="A">
-            <span>#{i18n.getText('QMM020_5')}</span>
+            <span class = "title">#{i18n.getText('QMM020_5')}</span>
             <button id="A1_1" tabindex="1" class="proceed"
                     data-bind="enable: $root.errors.isEmpty">#{i18n.getText('QMM020_1')}</button>
 
             <button id="A1_2" tabindex="2"
-                    data-bind="enable: $root.errors.isEmpty">#{i18n.getText('QMM020_2')}</button>
+                    data-bind=" enable: $root.errors.isEmpty">#{i18n.getText('QMM020_2')}</button>
 
             <button id="A1_3" tabindex="3"
                     data-bind="enable: false">#{i18n.getText('QMM020_3')}</button>
 
             <button id="A1_4" tabindex="4"
                     data-bind=" enable: false">#{i18n.getText('QMM020_4')}</button>
-        </div>
 
     </div>
-    <div style="margin-top: 30px;" class="contents-area fixed-flex-layout">
-        <div class = "emp-component-size">
-            <div tabindex="1" id="emp-component"></div>
+    <div style="margin-top: 15px;" class="contents-area ">
+        <div id = "H1_1" style="margin-left: 70px;">
+            <div tabindex="1" id="emp-component" style="margin-left: 10px;"></div>
         </div>
-        <div class="fixed-flex-layout-left" style="margin-left: 25px">
+        <div id="H1_2">
+            <div id="com-ccg001"></div>
+        </div>
+        <div class="fixed-flex-layout-left" style="margin-left: 90px;margin-top: 20px; float: left;">
             <div data-bind="ntsPanel:{width: '200px', height: '300px', direction: 'right', showIcon: false, visible: true}">
                 <div>
-                    <button id="H1_3" data-bind="enable: $root.errors.isEmpty">履歴追加</button>
+                    <button id="H2_3" data-bind="enable: $root.errors.isEmpty">#{i18n.getText('QMM020_13')}</button>
 
-                    <button id="H1_4" data-bind="enable: $root.errors.isEmpty" style="float: right">履歴編集</button>
+                    <button id="H2_4" data-bind="enable: $root.errors.isEmpty" style="float: right">#{i18n.getText('QMM020_14')}</button>
                 </div>
 
                 <div style="margin-top: 10px">
                     <table  id="H1_5"  data-bind="ntsGridList: {
                                             height: 250,
                                             dataSource: listStateCorrelationHis,
-                                            primaryKey: 'code',
+                                            primaryKey: 'hisId',
                                             columns: [
-                                                        { headerText: '', key: 'code', width: 100, hidden: true },
-                                                        { headerText: '', key: 'name', width: 150, hidden: true },
+                                                        { headerText: '', key: 'hisId', width: 100, hidden: true },
                                                         { headerText: '', key: 'display', width: 180},
                                                     ],
                                             multiple: false,
-                                            value: currentSelect
+                                            value: hisIdSelected
                                         }"></table>
                 </div>
             </div>
         </div>
-        <div class="fixed-flex-layout-right">
-            <div class="control-group" style="border-bottom: #CCCCCC 1px solid;">
-                <div id="H2_1" style="margin-bottom: 10px;" data-bind="ntsFormLabel: {}">#{i18n.getText('QMM020_24')}</div>
+        <div class="fixed-flex-layout-right" style="margin-top: 20px;">
+            <span id = "H3_1" style="margin-bottom: 15px;">#{i18n.getText('QMM020_46')}</span>
+            <div class="control-group flex valign-center" style="min-width: 500px;padding-top: 15px;margin-left: 20px">
+                <pre tabindex="-1">#{i18n.getText('QMM020_18')}</pre>
+                <span id="H3_3" style="padding-left: 30px">#{i18n.getText('QMM020_19')}</span>
+            </div>
+            <hr></hr>
+            <div class="control-group" style="margin-top: 20px;">
+                <div data-bind="ntsFormLabel: {}">
+                    <span class="label">#{i18n.getText('QMM020_20')}</span>
+                    <button style="margin-left: 15px;" data-bind=" ">#{i18n.getText('QMM020_21')}</button>
+                    <span style="margin-left: 20px;" data-bind="text: salaryCode"></span>
+                    <span style="margin-left: 10px;" data-bind="text: salaryName"></span>
+                </div>
             </div>
 
-            <div>
-                <div style="width: 700px" data-bind="ntsSearchBox: {targetKey: 'empCode', comId: 'multi-list',
-	items: items, selected: currentCodeList, selectedKey: 'empCode', fields: ['empName', 'empCode'], mode: 'igGrid'}" />
-
-                <table id="multi-list" data-bind="ntsGridList: {
-                    height: 320,
-                    options: items,
-                    optionsValue: 'empCode',
-                    columns: columns,
-                    multiple: false,
-                    value: currentCodeList
-                }"></table>
-
+            <div class="control-group" style="margin-top: 15px;">
+                <div data-bind="ntsFormLabel: {}">
+                    <span class="label">#{i18n.getText('QMM020_20')}</span>
+                    <button style="margin-left: 15px;" data-bind=" ">#{i18n.getText('QMM020_21')}</button>
+                    <span style="margin-left: 20px;" data-bind="text: bonusCode"></span>
+                    <span style="margin-left: 10px;" data-bind="text: bonusName"></span>
+                </div>
             </div>
+
         </div>
     </div>
 </div>
