--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/001/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/001/a/index.xhtml
@@ -40,7 +40,7 @@
 					data-bind="click: register, enable:  $root.errors.isEmpty">#{i18n.getText('CMM001_2')}</button>
 				<!-- A1_3 -->
 				<button id="setting" tabindex="3" class="group-button-1"
-					data-bind="click: openEDialog, enable: true">#{i18n.getText('CMM001_3')}</button>
+					data-bind="click: openEDialog, enable: !checkInsert()">#{i18n.getText('CMM001_3')}</button>
 				<!-- A1_4 -->
 				<button id="masterLog" tabindex="4" class="group-button-1"
 				    data-bind="visible: false">#{i18n.getText('CMM001_4')}</button>
