--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/d/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/d/index.xhtml
@@ -494,13 +494,13 @@
                                                 <!--D11_27-->
                                                 <span class="label" data-bind="text: upperLimitSetting.rangeValue()"/>
                                                 <!--D11_28-->
-                                                <span class="label">円を超える場合</span>
+                                                <span class="label">#{i18n.getText('QMM019_63')}</span>
                                             </div>
                                             <div class="label range-setting">
                                                 <!--D11_29-->
                                                 <span class="label" data-bind="text: lowerLimitSetting.rangeValue()"/>
                                                 <!--D11_30-->
-                                                <span class="label">円未満の場合</span>
+                                                <span class="label">#{i18n.getText('QMM019_69')}</span>
                                             </div>
                                         </td>
                                     </tr>
@@ -516,13 +516,13 @@
                                                 <!--D11_31-->
                                                 <span class="label" data-bind="text: upperLimitSetting.rangeValue()"/>
                                                 <!--D11_32-->
-                                                <span class="label">円を超える場合</span>
+                                                <span class="label">#{i18n.getText('QMM019_63')}</span>
                                             </div>
                                             <div class="label range-setting">
                                                 <!--D11_33-->
                                                 <span class="label" data-bind="text: lowerLimitSetting.rangeValue()"/>
                                                 <!--D11_34-->
-                                                <span class="label">円未満の場合</span>
+                                                <span class="label">#{i18n.getText('QMM019_69')}</span>
                                             </div>
                                         </td>
                                     </tr>
