--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/e/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/e/index.xhtml
@@ -444,13 +444,13 @@
                                                 <!--E10_17-->
                                                 <span class="label" data-bind="text: upperLimitSetting.rangeValue()"/>
                                                 <!--E10_18-->
-                                                <span class="label">円を超える場合</span>
+                                                <span class="label">#{i18n.getText('QMM019_63')}</span>
                                             </div>
                                             <div class="label range-setting">
                                                 <!--E10_19-->
                                                 <span class="label" data-bind="text: lowerLimitSetting.rangeValue()"/>
                                                 <!--E10_20-->
-                                                <span class="label">円未満の場合</span>
+                                                <span class="label">#{i18n.getText('QMM019_69')}</span>
                                             </div>
                                         </td>
                                     </tr>
@@ -466,13 +466,13 @@
                                                 <!--E10_21-->
                                                 <span class="label" data-bind="text: upperLimitSetting.rangeValue()"/>
                                                 <!--E10_22-->
-                                                <span class="label">円を超える場合</span>
+                                                <span class="label">#{i18n.getText('QMM019_63')}</span>
                                             </div>
                                             <div class="label range-setting">
                                                 <!--E10_23-->
                                                 <span class="label" data-bind="text: lowerLimitSetting.rangeValue()"/>
                                                 <!--E10_24-->
-                                                <span class="label">円未満の場合</span>
+                                                <span class="label">#{i18n.getText('QMM019_69')}</span>
                                             </div>
                                         </td>
                                     </tr>
