--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/001/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmm/001/a/index.xhtml
@@ -45,7 +45,7 @@
 				<button id="masterLog" tabindex="4" class="group-button-1"
 				    data-bind="visible: false">#{i18n.getText('CMM001_4')}</button>
 			</div>
-			<div id="contents-area" class="fixed-flex-layout">
+			<div id="contents-area" class="fixed-flex-layout" style="display: none" data-bind="visible: true">
 				<div class="fixed-flex-layout-left">
 					<div id="ntsleft" class="bg-green caret-right caret-background">
 						<!-- A2_2 -->
