--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/007/b/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/007/b/index.xhtml
@@ -22,7 +22,7 @@
             <div id="title" style="margin: 10px 20px 20px 10px">
                 <span id="B1_1" class="label">#{i18n.getText('QMM007_31')}</span>
             </div>
-            <div class="table table-col-3">
+            <div class="table table-col-3" >
                 <div class="cell valign-center">
                     <!-- B1_2 コード/名称 -->
                     <div id="B1_2" data-bind="ntsFormLabel: {}">#{i18n.getText('QMM007_5')}</div>
@@ -37,7 +37,7 @@
                 </div>
             </div>
 
-            <div class="table table-col-3">
+            <div class="table table-col-3" style="width: 480px">
                 <div class="cell valign-center">
                     <!-- B1_5 期間 -->
                     <div id="B1_5" data-bind="ntsFormLabel: { required: true }">#{i18n.getText('QMM007_32')}</div>
