--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/039/c/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/039/c/index.xhtml
@@ -10,7 +10,7 @@
         <script>
             var dialogSize = {
                 width: 535,
-                height: 300
+                height: 340
             };
         </script>
         <com:scriptfile set="IGNITE"/>
@@ -34,23 +34,23 @@
 										enable: canDelete,
 										options: modifyItem,
 										optionsValue: 'value',
-										optionsText: 'name'}"></div>
+										optionsText: 'name'}"/>
                     </div>
-                    <div style="margin-top: 20px; margin-left: 150px;" class="flex valign-center">
+                    <div style="margin-top: 15px; margin-left: 150px;" class="flex valign-center">
                         <div style="width: 50px;display: inline-block;margin-left: 35px;"
                              data-bind="ntsFormLabel: {required: true}">#{i18n.getText('QMM039_23')}</div>
-                        <div tabindex="2" data-bind="ntsDatePicker: {value: yearMonthStart, dateFormat: 'yearmonth',required: true,name : '#[QMM008_197]'}"></div>
+                        <div tabindex="2" data-bind="ntsDatePicker: {value: yearMonthStart, dateFormat: 'yearmonth',required: true,name : '#[QMM008_197]'}"/>
                         <span style="padding-left: 5px; padding-right: 5px"> ~  </span>
-                        <span data-bind="text: yearMonthEnd()"></span>
+                        <span data-bind="text: yearMonthEnd()"/>
                     </div>
                 </div>
 
             </div>
         </div>
         <div id="functions-area-bottom">
-            <button tabindex="3" class="x-large proceed "
-                    data-bind="click: editHistory, enable: $root.errors.isEmpty">#{i18n.getText('QMM008_202')}</button>
-            <button tabindex="4" class="large" data-bind="click: cancel">#{i18n.getText('QMM008_203')}</button>
+            <button tabindex="3" class="x-large proceed"
+                    data-bind="click: editHistory, enable: $root.errors.isEmpty">#{i18n.getText('QMM039_38')}</button>
+            <button tabindex="4" class="large" data-bind="click: cancel">#{i18n.getText('QMM039_32')}</button>
         </div>
     </ui:define>
 </ui:composition>
