--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/039/d/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/039/d/index.xhtml
@@ -8,10 +8,7 @@
 <ui:composition template="../../../../master/dialog.xhtml">
     <ui:define name="htmlHead">
         <script>
-            var dialogSize = {
-                width: 535,
-                height: 520
-            };
+            var dialogSize = {width: 570, height: 530 };
         </script>
         <com:scriptfile set="IGNITE"/>
         <com:scriptfile path="../share/model.js"/>
@@ -35,7 +32,7 @@
                     </div>
                     <div class="cell">
                         <!--D2_2 社員コード-->
-                        <div class="label" data-bind="text: empCode"></div>
+                        <div class="label" data-bind="text: empCode"/>
                     </div>
                 </div>
                 <div class="row">
@@ -45,7 +42,7 @@
                     </div>
                     <div class="cell">
                         <!--D2_4 社員名-->
-                        <span class="label" data-bind="text: empName"></span>
+                        <span class="label" data-bind="text: empName"/>
                     </div>
                 </div>
                 <div class="row">
@@ -54,7 +51,7 @@
                         <div data-bind="ntsFormLabel: {}">#{i18n.getText('QMM039_20')}</div>
                     </div>
                     <div class="cell">
-                        <span class="label" data-bind="text: itemClassification"></span>
+                        <span class="label" data-bind="text: itemClassification"/>
                     </div>
                 </div>
                 <div class="row">
@@ -65,7 +62,7 @@
                     <div class="cell">
                         <!--D2_8 基準年月-->
                         <div id="D2_8" tabindex="2"
-                             data-bind="ntsDatePicker: {name: '#[QMM039_42]', value: referenceYear, dateFormat: 'yearmonth',required: true}"></div>
+                             data-bind="ntsDatePicker: {name: '#[QMM039_42]', value: referenceYear, dateFormat: 'yearmonth',required: true}"/>
                         <!--D2_9 抽出-->
                         <button tabindex="3" id="D2_9" class="caret-bottom"
                                 data-bind="click: extract,  enable: $root.errors.isEmpty">#{i18n.getText('QMM039_43')}</button>
@@ -75,23 +72,18 @@
             </div>
             <div style="margin: 0px 6px">
             <!--D3_1 金額一覧-->
-            <table tabindex="4" id="gridlist" data-bind="ntsGridList: {
+                <table tabindex="4" id="gridlist" data-bind="ntsGridList: {
                 name: '#[QMM039_44]',
                 height: 150,
                 dataSource: items,
                 primaryKey: 'code',
-                columns: [
-                            {key:'empId', length: 0, hidden: true},
-                            {headerText: '#{i18n.getText('QMM039_13')}', key: 'code', width: 70},
-                            {headerText: '#{i18n.getText('QMM039_14')}', key: 'name', width: 120},
-                            {headerText: '#{i18n.getText('QMM039_23')}', key: 'period', width: 160},
-                            {headerText: '#{i18n.getText('QMM039_25')}', key: 'amount', width: 130}
-				],
+                columns: columns,
                 optionsValue: 'code',
                 optionsText: 'name',
                 multiple: false,
-                value: currentCode
-            }"></table>
+                value: currentCode,
+                rows: 8
+            }"/>
             </div>
         </div>
     </ui:define>
